[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/StatusEffect.gd" type="Script" id=1]

[node name="StatusEffectTemplate" type="Node2D"]
script = ExtResource( 1 )

[node name="EffectTimer" type="Timer" parent="."]

[node name="StatusAnim" type="AnimationPlayer" parent="."]

[node name="StatusSound" type="AudioStreamPlayer" parent="."]
